--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^5.1.0",
     "express-session": "^1.18.2",
     "method-override": "^3.0.0",
+    "multer": "^2.0.2",
     "nodemon": "^3.1.11",
     "pg": "^8.17.1",
     "pug": "^3.0.3"
